--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,6 @@
     <script src="js/jQuery v3.6.0.js" ></script>
     <link rel="stylesheet" href="css/main.css">
     <title>TIENDA WOOF AND MIAU</title>
-    
 </head>
   <body>
   <!-- navbar -->
@@ -135,6 +134,8 @@
     <!-- info -->
 </div>
 <script src="js/main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
   </body>
   <footer class="text-center bg-secundario text-light">
     <div class="container pt-3">
