--- a/tienda.html
+++ b/tienda.html
@@ -10,7 +10,7 @@
     <div class="text-center">
       <img src="images/Gato&perros.jpeg" class="w-100" alt="">
     </div>
-    <a href="Gatos.html">
+    <a href="#" id="gatos">
       <div class="container justify-content-center w-50 vertical">
         <div class="text-center m-4 p-4 bg-primario">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="100" height="100" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -19,8 +19,10 @@
           </svg>
           <h3 style="color: aliceblue;">Gatos</h3>
         </div>
+      </div>
     </a>
-    <a href="Perros.html">
+    <a href="#" id="perros">
+    <div class="container justify-content-center w-50 vertical">
       <div class="text-center m-4 p-4 bg-primario">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dog-bowl" width="100" height="100" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -30,8 +32,10 @@
         </svg>
         <h3 style="color: aliceblue;" >Perros</h3>
       </div>
+    </div>
     </a>
-    <a href="Mas...html">
+    <a href="#" id="mas">
+    <div class="container justify-content-center w-50 vertical">
       <div class="text-center m-4 p-4 bg-primario">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart-discount" width="100" height="100" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -45,8 +49,10 @@
         </svg>
         <h3 style="color: aliceblue;" >Más...</h3>
       </div>
+    </div>
     </a>
     </div>        
+<script src="js/main.js"></script>
 </body>
 <footer class="text-center bg-secundario text-light">
   <div class="container pt-3">
